# icegres

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml
bench/: .gitignore  COMPARISON.md  SCORECARD.md  SPEC.md  bench.sh  gate.sh  mem.sh  parity.sh  scale.sh
bench/clients/: A9FlightJdbcProbe.java  A9JdbcProbe.java  a10_odbc_probe.py  a10_odbc_probe.sh  a11_adbc_probe.py  a12_flightsql_dbapi_probe.py  a13_flightsql_dbapi_probe.py  a8_orm_probe.py  a9_jdbc_probe.sh  authz_probe.sh  flightsql_verify.py  mem_probe.py  p1_flight_perf.py  p1_stale_probe.py  p1_tail_reader.py
bench/clients/a14-npgsql-probe/: Probe.csproj  Program.cs
bench/clients/catalog-gateway/: go.mod  main.go
bench/clients/js/: .gitignore  README.md  build.mjs  package-lock.json  package.json
bench/clients/js/bench/: node-bench.mjs  run.mjs  seed_dash_trips.py  smoke.mjs
bench/clients/js/lib/: flight.js  pb.js  zstd-node.js
bench/clients/js/proxy/: grpcweb.js  server.js
bench/clients/js/web/: bench-page.js  bench.html  dashboard.html  dashboard.js  explorer.html  explorer.js  flight-web.js  paths.js  zstd-web.js
bench/compare/: bi_stack_fetch.py  compare.py  fetch_bench.py  make_trips_big.py  run_all.sh  scale.py
bench/compare/npgsql-fetch/: Bench.csproj  Program.cs
bench/flightsql-server/: Cargo.toml
bench/flightsql-server/src/: main.rs
bench/harness/: Cargo.toml
bench/harness/src/: main.rs
bench/results/: bench-20260705T162147Z.json  bench-20260705T162511Z.json  bench-20260705T162606Z.json  bench-20260705T163201Z.json  bench-20260705T163255Z.json  bench-20260705T164622Z.json  bench-20260705T171214Z.json  bench-20260705T172127Z.json  bench-20260705T173613Z.json  bench-20260705T173715Z.json  bench-20260705T174156Z.json  bench-20260705T175051Z.json  bench-20260705T175240Z.json  bench-20260705T180705Z.json  bench-20260705T182535Z.json  bench-20260705T192303Z.json  bench-20260705T192646Z.json  bench-20260705T192828Z.json  bench-20260705T193738Z.json  bench-20260705T194038Z.json  bench-20260705T195716Z.json  bench-20260705T200322Z.json  bench-20260705T200421Z.json  bench-20260705T202653Z.json  bench-20260705T203036Z.json  bench-20260705T203254Z.json  bench-20260705T213153Z.json  bench-20260705T233742Z.json  bench-20260705T234123Z.json  bench-20260705T234443Z.json  bench-20260706T001024Z.json  bench-20260706T004900Z.json  bench-20260706T005744Z.json  bench-20260706T005853Z.json  bench-20260706T015811Z.json  bench-20260706T020801Z.json  bench-20260706T031205Z.json  bench-20260706T033809Z.json  bench-20260706T035052Z.json  bench-20260706T131053Z.json  (+74 more)
clients/bi/: README.md
clients/bi/digdash/: README.md
clients/bi/extract/: README.md  pyproject.toml
clients/bi/extract/icegres_bi_extract/: __init__.py  cli.py  core.py
clients/bi/extract/tests/: test_core.py  test_publish_mock.py
clients/bi/grafana/: README.md
clients/bi/powerbi/: README.md
clients/bi/powerbi/connector/: Icegres.pq  Icegres.query.pq  README.md
clients/bi/superset/: README.md  requirements-local.txt
clients/bi/tableau/: README.md  postgresql.properties
clients/flight-proxy/: README.md  index.d.ts  package.json
clients/flight-proxy/example/: queries.js
clients/flight-proxy/proto/: flight.proto
clients/flight-proxy/src/: allowlist.js  flight.js  gateway.js  http.js  index.js  server.js
clients/flight-proxy/test/: allowlist.test.js  gateway.test.js  streaming.test.js
clients/flight-web/: README.md  index.d.ts  package-lock.json  package.json
clients/flight-web/src/: client.js  index.js  pb.js  zstd-node.js  zstd.js
clients/flight-web/test/: integration.test.js  pb.test.js
deploy/helm/icegres/: Chart.yaml  README.md  values.yaml
deploy/helm/icegres/templates/: NOTES.txt  _helpers.tpl  _trio.tpl  configmap.yaml  flight-deployment.yaml  flight-ingress.yaml  flight-service.yaml  icegresd-deployment.yaml  icegresd-pdb.yaml  icegresd-service.yaml  keeper-trio.yaml  lease-trio.yaml  networkpolicy.yaml  rbac.yaml  read-deployment.yaml  read-service.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml  writer-service.yaml  writer-statefulset.yaml
deploy/helm/tests/golden/: defaults.yaml  flight-grpcweb.yaml  ha.yaml  readreplicas-tls-auth.yaml  tail-dir.yaml  tail-quorum.yaml
deploy/helm/tests/values/: defaults.yaml  flight-grpcweb.yaml  ha.yaml  readreplicas-tls-auth.yaml  tail-dir.yaml  tail-quorum.yaml
docs/: architecture.md  bi-integration.md  catalog-support.md  clients.md  configuration.md  cqrs-topology.md  deployment.md  frontend-dashboards.md  lakebase-gap-audit.md  lakebase-lakegres-architecture-study.md  lakebase-ltap-vs-icegres.md  limitations.md  open-tail-protocol.md  p1-open-tail-scope.md  p2-matrix-bump-scope.md  p3-ha-scope.md  p5p7-scope.md  p6-scale-catalog-scope.md  perf-parity-roadmap.md  perf-write-transport-scope.md  production-readiness-audit.md  roadmap-v2-beyond-lakebase.md  rust-quality-scope.md  rust-quality.md  sota-roadmap.md  troubleshooting.md  write-latency-scope.md
icegres/: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
icegres/docs/: demo-session.txt
icegres/src/: asof.rs  authz.rs  branch.rs  buffer.rs  cache.rs  compact.rs  compat.rs  context.rs  dml.rs  flight.rs  freshness.rs  fuzz.rs  k8s.rs  keyed.rs  lease.rs  main.rs  maintain.rs  metrics.rs  ops.rs  overwrite.rs  peer.rs  pgauth.rs  plancache.rs  scan.rs  seed.rs  segment.rs  tail.rs  tail_pg.rs  tail_quorum.rs  tailapi.rs  timing.rs  traced.rs  txn.rs  verify.rs
icegres/src/quorum/: acceptor.rs  mod.rs  proposer.rs  proto.rs
icegres/tests/: e2e.sh  pinned_bound.sh  tail_durability.sh
infra/: .gitignore  README.md
infra/scripts/: down.sh  flightsql-start.sh  flightsql-stop.sh  gen-dev-cert.sh  lakekeeper-start.sh  lakekeeper-stop.sh  odbc-setup.sh  pg-start.sh  pg-stop.sh  rustfs-start.sh  rustfs-stop.sh  spark-start.sh  spark-stop.sh  trino-start.sh  trino-stop.sh  up.sh
scripts/: verify-history.sh
tests/: browser-flight.sh  helm.sh
(+2 files in other folders)
