[package]
name = "flightsql-server"
version = "0.1.0"
edition = "2021"
description = "Arrow Flight SQL endpoint over the same Iceberg tables icegres serves (transport comparison: gRPC/Arrow IPC vs pgwire on an identical DataFusion+iceberg-rust engine)"
license = "Apache-2.0"

[[bin]]
name = "flightsql-server"
path = "src/main.rs"

[dependencies]
# Same pinned Iceberg stack as ../../icegres/Cargo.toml — keep in lockstep.
iceberg = "=0.9.1"
iceberg-catalog-rest = "=0.9.1"
iceberg-datafusion = "=0.9.1"
iceberg-storage-opendal = "=0.9.1"

# Same pinned engine + arrow as icegres.
datafusion = "=52.5.0"
arrow = "=57.3.1"

# Flight SQL transport. arrow-flight 57.3.1 matches arrow 57.3.1 and pulls
# tonic 0.14 / prost 0.14.
arrow-flight = { version = "=57.3.1", features = ["flight-sql"] }
tonic = "0.14"
prost = "0.14"

tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "signal"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Match icegres's release profile so shared dep artifacts in the shared
# CARGO_TARGET_DIR fingerprint identically.
[profile.release]
strip = "symbols"
